<resources>
    <!--test_strings-->
    <string name="dummy_text">Dummy</string>
    <string name="dummy_number">40,4</string>

    <!--Main-->
    <string name="app_name">Ea$yPay Kassa</string>
    <string name="Products">Assortiment</string>
    <string name="Customer">Klantgegevens</string>
    <string name="Overview">Overzicht bestelling</string>
    <string name="account">Account</string>

    <string name="balance">Saldo</string>
    <string name="balance_wallet">Saldo: </string>
    <string name="balance_increase">Saldo opwaarderen</string>
    <string name="balance_refund">Saldo terugvragen</string>

    <string name="balance_wallet_increase">Huidig saldo: </string>
    <string name="balance_wallet_aincrease">Saldo na opwaardering: </string>
    <string name="balance_increase_confirm">Bevestigen</string>

    <string name="balance_refund_question">Weet u zeker dat u uw saldo wil terugboeken?</string>
    <string name="balance_refund_confirm">Bevestigen</string>
    <string name="balance_refund_cancel">Annuleren</string>

    <string name="over150">Saldo kan niet hoger zijn dan €150,-</string>
    <string name="isnull">Voer alstublieft een bedrag in.</string>
    <string name="nomoney">Geen saldo om terug te vragen.</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--general-->
    <string name="cancel">Annuleren</string>

    <!--login-->
    <string name="username_login">Gebruikersnaam</string>
    <string name="password_login">Wachtwoord</string>
    <string name="login_login">Inloggen</string>
    <string name="login_title">Kassamedewerker</string>
    <string name="signup_login">Aanmelden</string>

    <!--signup-->
    <string name="register_signup">Registreren</string>
    <string name="firstname_required_signup">* Voornaam</string>
    <string name="lastname_required_signup">* Achternaam</string>
    <string name="username_required_signup">* Gebruikersnaam</string>
    <string name="password_required_signup">* Wachtwoord</string>
    <string name="email_signup">Email</string>
    <string name="banknumber_signup">Bankrekeningnummer</string>

    <!--userdata-->
    <string name="userdata_userdata">Accountgegevens</string>
    <string name="firstname_userdata">Voornaam:</string>
    <string name="lastname_userdata">Achternaam:</string>
    <string name="username_userdata">Gebruikersnaam:</string>
    <string name="password_userdata">Wachtwoord:</string>
    <string name="email_userdata">Email:</string>
    <string name="banknumber_userdata">Bankrekeningnr:</string>
    <string name="wachtwoord_herh_userdata">Wachtwoord herh:</string>
    <string name="new_password_userdata">Nieuw wachtwoord:</string>
    <string name="confirm_password_userdata">Wachtwoord bevestigen</string>

    <string-array name="category_array">
        <item>Drank</item>
        <item>Frisdrank</item>
        <item>Eten</item>
    </string-array>

    <string-array name="spinner_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="spinnerArray">
    <item>Likeurpaleis</item>
    <item>Friettent</item>
    <item>Koffiehuis</item>
    <item>Pizzahut</item>
    <item>Bierplaza</item>
    </string-array>

    <!--Assortment Activity-->
    <string name="assortment_view_button">Assortiment bekijken</string>
    <string name="assortment_alter_button">Hoeveelheid producten wijzigen</string>
    <string name="assortment_add_button">Product toevoegen</string>
    <string name="assortment_remove_button">Product verwijderen</string>

    <!--DrinksAndFoodSelectAction-->
    <string name="tooltip_drinks_and_foods">Welke actie wilt U uitvoeren?</string>

    <!--Activity overview current orders-->
    <string name="title_activity_oco">OHB</string>
    <string name="title_oco">Bestelling</string>
    <string name="subtotal_oco">Subtotaal: €</string>
    <string name="button_text_oco">Bestellen</string>

    <!--listview product row-->
    <string name="lpr_1">Product Name</string>
    <string name="lpr_2">Product Price</string>

    <!--activity_scan-->
    <string name="button_scan">Cancel</string>
    <string name="instructions_scan">Houd uw telefoon tegen de kassa</string>
    <string name="hours_worked_userdata">Uren gewerkt:</string>
    
    <!--activity_customer_data-->
    <string name="customer_data_achternaam">Achternaam:</string>
    <string name="customer_data_saldo">Saldo:</string>
    <string name="customer_data_klantID">KlantID:</string>
    <string name="customer_data_unavailable">Unavailable</string>
    
    <string name="select_location">Selecteer locatie</string>
</resources>
