<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.avans.easypay.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_number"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_gravity="start"
            android:id="@+id/toolbar_balance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />

        <ImageView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_exit_to_app_24dp"
            android:layout_marginEnd="@dimen/leftRightMain"
            android:contentDescription="@string/dummy_text"/>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/editText"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/tooltip_drinks_and_foods"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/assortment_view"
            android:layout_width="220dp"
            android:layout_height="62dp"
            android:text="@string/assortment_view_button" />

        <Button
            android:id="@+id/assortment_alter"
            android:layout_width="220dp"
            android:layout_height="62dp"
            android:text="@string/assortment_alter_button"/>

        <Button
            android:id="@+id/assortment_add"
            android:layout_width="220dp"
            android:layout_height="62dp"
            android:text="@string/assortment_add_button"/>

        <Button
            android:id="@+id/assortment_remove"
            android:layout_width="220dp"
            android:layout_height="62dp"
            android:text="@string/assortment_remove_button" />

    </LinearLayout>


</LinearLayout>