<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false"
    >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/view_product_image"
        android:contentDescription="@string/dummy_text"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:id="@+id/view_product_name"
            android:layout_marginEnd="30dp"
            android:text="@string/lpr_1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:id="@+id/view_product_price"
            android:text="@string/lpr_2" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="Product Amount"
            android:id="@+id/view_product_amount"
            android:layout_marginEnd="30dp"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>
