<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.avans.easypaykassa.EmployeeDataActivity">

    <include layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/leftRightMain"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/header_margin"
                android:text="@string/userdata_userdata"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/user_data_row_size"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10"
                            android:text="@string/firstname_userdata"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/firstname_textview"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="16"
                            android:text="Hassan"
                            android:textColor="#000"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_data_editable"
                            android:visibility="invisible" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/user_data_row_size"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="10"
                                android:text="@string/lastname_userdata"
                                android:textColor="#000"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/lastname_textview"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="16"
                                android:text="Geenjassaan"
                                android:textColor="#000"
                                android:textSize="14sp" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/ic_data_editable"
                                android:visibility="invisible" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/user_data_row_size"
                            android:layout_marginBottom="-4dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="10"
                                android:text="@string/username_userdata"
                                android:textColor="#000"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/username_textview"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="16"
                                android:text="Jojopay"
                                android:textColor="#000"
                                android:textSize="14sp" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/ic_data_editable"
                                android:visibility="invisible" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/user_data_row_size"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="10"
                                android:text="@string/email_userdata"
                                android:textColor="#000"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/email_edittext"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="16"
                                android:background="@drawable/edittext_uneditable"
                                android:inputType="textEmailAddress"
                                android:padding="4dp"
                                android:text="jojopay@easypay.cash"
                                android:textColor="#000"
                                android:textSize="14sp" />

                            <ImageView
                                android:id="@+id/email_edit_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:background="@drawable/ic_data_editable" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/user_data_row_size"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="10"
                                android:text="@string/banknumber_userdata"
                                android:textColor="#000"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/banknumber_edittext"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="16"
                                android:background="@drawable/edittext_uneditable"
                                android:inputType="text"
                                android:padding="4dp"
                                android:text="NL99 RABO 0123 4455 67"
                                android:textColor="#000"
                                android:textSize="14sp" />

                            <ImageView
                                android:id="@+id/banknumber_edit_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:background="@drawable/ic_data_editable" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/user_data_row_size"
                            android:layout_marginBottom="-4dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="10"
                                android:text="@string/hours_worked_userdata"
                                android:textColor="#000"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/hours_worked_edittext"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="16"
                                android:background="@drawable/edittext_uneditable"
                                android:inputType="text"
                                android:padding="4dp"
                                android:text="48"
                                android:textColor="#000"
                                android:textSize="14sp" />

                            <ImageView
                                android:id="@+id/hours_worked_edit_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:background="@drawable/ic_data_editable" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

